Added the links to the streams and updated my color scheme.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <button id="submit-button" disabled>Search</button>
                 </div>
                 <div id="alert" class="main-area box center">
-                    <strong>Warning!</strong> There are no streams with that game name, please try again.
+                    <strong>Warning!&nbsp;</strong> There are no streams with that game name, please try again.
                 </div>
             </div>
             <div id="main-content" class="main-area box">
